# aitran

./: .pre-commit-config.yaml  AGENTS.md  CHANGELOG.md  LICENSE  README.md  pyproject.toml
.beads/: interactions.jsonl  issues.jsonl  metadata.json
docs/: backlog-internal.md  design-review-agent.md
src/aitran/: __init__.py  __main__.py  agent.py  app.py  cli.py  crowdin.py  dicts.py  flow.py  manipulate.py  observability.py  review.py  sync.py  translate.py  utils.py  weblate.py
src/aitran/agents/: __init__.py  _base.py  orchestrator.py  reviewer.py  translator.py
src/aitran/prompts/: __init__.py
src/aitran/qa/: __init__.py  checkers.py  runner.py
src/aitran/toolsets/: __init__.py  _base.py  crowdin.py  translate.py  weblate.py
tests/: helpers.py  test_app.py  test_cli.py  test_crowdin.py  test_dicts.py  test_flow.py  test_manipulate.py  test_observability.py  test_orchestrator.py  test_prompts.py  test_qa.py  test_review.py  test_review_apply.py  test_reviewer.py  test_toolset_crowdin.py  test_toolset_translate.py  test_toolset_weblate.py  test_translate.py  test_weblate.py
