[project]
name = "aitran"
version = "0.3.0"
description = "Agentic translation workflows for localization platforms, plus direct PO/XLIFF translation — streaming progress, deferred approval, and translator notes for human review"
readme = "README.md"
license = "GPL-2.0-or-later"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [
    {name = "Jadeiin", email = "92222981+Jadeiin@users.noreply.github.com"},
]
keywords = [
    "ai",
    "gettext",
    "i18n",
    "internationalization",
    "l10n",
    "llm",
    "localization",
    "po",
    "translation",
    "xliff",
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Environment :: Console",
    "Intended Audience :: Developers",
    "Natural Language :: Chinese (Simplified)",
    "Natural Language :: English",
    "Operating System :: OS Independent",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Internationalization",
    "Topic :: Software Development :: Localization",
    "Topic :: Text Processing :: Linguistic",
    "Topic :: Utilities",
]
dependencies = [
    "translate-toolkit>=3.14",
    "click>=8.1",
    "platformdirs>=4.0",
    "pydantic-ai-slim[anthropic,openai,retries]>=1.0",
    "rich>=13.0",
    "prompt-toolkit>=3.0",
    "wlc>=2.0.0",
    "crowdin-api-client>=1.26.0",
]

[project.optional-dependencies]
logfire = ["pydantic-ai-slim[logfire]>=1.0"]
mlflow = ["mlflow-tracing>=3.1"]

[project.scripts]
aitran = "aitran.cli:app"

[project.urls]
Homepage = "https://github.com/Jadeiin/aitran"
Issues = "https://github.com/Jadeiin/aitran/issues"
Repository = "https://github.com/Jadeiin/aitran"

[build-system]
requires = ["uv_build>=0.11.3,<0.12"]
build-backend = "uv_build"

[[tool.uv.index]]
url = "https://mirrors.tuna.tsinghua.edu.cn/pypi/web/simple"
default = true

[tool.ruff]
preview = true

[tool.ruff.lint]
extend-select = [
    "ARG",  # flake8-unused-arguments
    "B",    # flake8-bugbear
    "C4",   # flake8-comprehensions
    "D",    # pydocstyle
    "DOC",  # pydoclint
    "E",    # pycodestyle errors
    "F",    # pyflakes
    "FA",   # flake8-future-annotations
    "I",    # isort
    "PIE",  # flake8-pie
    "Q",    # flake8-quotes
    "RET",  # flake8-return
    "RUF",  # ruff specific rules
    "SIM",  # flake8-simplify
    "TC",   # flake8-type-checking
    "TID",  # flake8-tidy-imports
    "UP",   # pyupgrade
    "W",    # pycodestyle warnings
]
future-annotations = true

[tool.ruff.lint.per-file-ignores]
"tests/**" = ["D", "DOC"]
"src/aitran/agents/**" = ["E501"]
"src/aitran/qa/checkers.py" = ["RUF001", "RUF002"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.commitizen]
name = "cz_conventional_commits"
tag_format = "v$version"
version_scheme = "pep440"
version_provider = "uv"
update_changelog_on_bump = true
major_version_zero = true

[dependency-groups]
dev = [
    {include-group = "lint"},
    {include-group = "test"},
]
lint = [
    "commitizen>=4.12.1",
    "prek>=0.3.0",
    "ruff>=0.14.14",
]
test = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "pytest-mock>=3.14",
]

[tool.pytest.ini_options]
asyncio_mode = "auto"
